--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,23 @@
+.bombillo{
+    width: 80px;
+    height: 80px;
+    border-radius: 100%;
+    border: none;
 
-/* 
-
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+}
+.container{
+    display: grid;
+    justify-content: space-around;
+    background-color: black;
+    width: 130px;
+    border-radius: 5px;
+}
+.tubo{
+    background-color: black;
+    width: 34px;
+    height: 80px;
+    position: relative;
+    top: 40px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
